--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ python-decouple==3.6
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
+reportlab==3.6.11
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
